# mr30public

./: LICENSE  readme.md
Universal_Robots_ROS_Driver/ur_calibration/etc/: ur10_example_calibration.yaml
abb_control/config/: obstacles.yaml
abb_control/include/abb_control/: arm_control.hpp
abb_control/launch/: arm_control_node.launch
abb_control/src/: arm_control.cpp
abb_control/src/abb_control/: arm_control_client.py
extra/: generate_gif.py  install_conda_pkgs.yaml
helper_script/: bash_evaluator.sh  crop_pointcloud.py  extract_pointcloud_data.py  generate_metrics_table.py  run_stitch.sh  visualize_metrics.py
mr-30/: CMakeLists.txt  package.xml
mr-30/config/: d435.json  l515.json
mr-30/include/: pointcloud_stitcher.hpp  rosbag_reader.hpp
mr-30/launch/: moveit.launch  realsense.launch  stitch.launch
mr-30/models/: armadillo_06.sdf  box_with_ball.sdf  box_with_ball.stl  bunny.sdf  plant.sdf
mr-30/scripts/pointcloud/: _readpointcloud_test.cpp  capture_pointcloud.py  pointcloud_evaluator.cpp  pointcloud_stitcher.cpp  rosbag_reader.cpp  sdf2stl.py  stitch_node.cpp
mr-30/scripts/robot/: move_grid.py  move_to_point.py  rviz_model.py  set_initial_joint_positions.py  set_ur10_initial_positions.py
realsense2_description/meshes/: ur_realsense.stl  ur_realsense2.stl  ur_zivid.stl
realsense2_description/urdf/: _d435.gazebo.xacro  _d435.urdf.xacro  _d435_ga.urdf.xacro  _l515.urdf.xacro  _ur_mount.urdf.xacro  _ur_mount2.urdf.xacro  _ur_mount_zivid.urdf.xacro  _usb_plug.urdf.xacro  test_d435_camera.urdf.xacro  test_l515_camera.urdf.xacro
universal_robot/ur10_moveit_config/config/: ompl_planning.yaml  sensors_3d.yaml  ur10.srdf
universal_robot/ur10_moveit_config/launch/: move_group.launch  ur10_moveit_sensor_manager.launch.xml
universal_robot/ur_description/urdf/: ur.xacro
universal_robot/ur_gazebo/launch/: ur10_bringup.launch
universal_robot/ur_gazebo/urdf/: ur.xacro
viewpoint_planning/launch/: viewpoint_planning.launch
viewpoint_planning/src/perception/: perceiver.py  realsense_ros_capturer.py
viewpoint_planning/src/scene_representation/: voxel_grid.py
viewpoint_planning/src/viewpoint_planners/: frontier_planner.py  (+7 more)
yumi_ros/yumi_description/: yumi.rviz  yumi_moveit.rviz
(+20 files in other folders)
